# astra-music-player

./: .gitignore  AGENTS.md  ESTADO.md  MANIFEST.in  NOTICE  README.md  RELEASE_NOTES.md  album_art.py  audio_chain.py  blur_manager.py  coverflow.py  diagnose_coverflow.py  eq_advanced.py  eq_autoeq.py  eq_band_row.py  eq_basic.py  eq_convert.py  eq_curve.py  eq_panel.py  eq_presets.py  expanded_view.py  icons.py  install_arch.sh  install_ubuntu.sh  library_db.py  main.py  nowplaying_bar.py  player.py  preferences_window.py  pyproject.toml  radio_dialog.py  radio_manager.py  radio_widget.py  remote_browser.py  requirements-audio-analysis.txt  requirements.txt  server_dialog.py  sidebar_widget.py  subsonic_client.py  sync_discovery.py  (+6 more)
adapters/: mpris.py
android/: settings.gradle.kts
astra_music_player.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
audio/: audio_chain.py  audio_diagnostics.py  dac_manager.py  dff_parser.py  dsp_state.py  eq_advanced.py  eq_autoeq.py  eq_band_row.py  eq_basic.py  eq_biquad.py  eq_convert.py  eq_curve.py  eq_presets.py  format_probe.py  output_device_manager.py  output_profiles.py  pipeline_factory.py  player.py  player_service.py  quality_classifier.py  replaygain.py  spectrum.py
audio_analysis/: acoustic_profile.py  analysis_service.py  dependency_check.py  feature_extractor.py  feature_repository.py  schemas.py  similarity_index.py
core/: app_context.py  app_services.py  crash_reporter.py  file_actions.py  file_manager_service.py  interfaces.py  logger.py  paths.py  playback_controller.py  safe_file_ops.py  settings_manager.py  sqlite_utils.py  state_store.py  toast_service.py  worker_manager.py
docs/: roadmap.md  (+34 more)
(+718 files in other folders)
