[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-music-player"
version = "0.1.0-alpha"
description = "Modern music player for Linux/KDE built with Python, PySide6 and GStreamer"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Cristian"}
]
keywords = [
    "music-player", "linux", "kde", "plasma", "gstreamer",
    "pyside6", "qt6", "subsonic", "navidrome", "jellyfin",
    "audio-player", "sqlite"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "PySide6>=6.7",
    "mutagen>=1.47",
    "numpy>=1.24",
    "dbus-python>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
]

[project.urls]
Homepage = "https://github.com/pitydah/astra-music-player"
Repository = "https://github.com/pitydah/astra-music-player.git"
Issues = "https://github.com/pitydah/astra-music-player/issues"

[project.scripts]
astra-music-player = "main:main"

[tool.setuptools]
packages = ["adapters", "audio", "core", "library", "streaming", "sync", "ui"]
py-modules = ["main"]
